Fix color contrast for custom table page

--- a/pages/table/styles.scss
+++ b/pages/table/styles.scss
@@ -17,15 +17,15 @@
   }
 
   &-cell {
-    border-left: 1px solid #aaa;
-    border-bottom: 1px solid #aaa;
+    border-left: 1px solid tokens.$color-border-divider-default;
+    border-bottom: 1px solid tokens.$color-border-divider-default;
     padding: 8px 16px;
 
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    background-color: white;
+    background-color: tokens.$color-background-container-content;
 
     &.sticky-cell {
       position: sticky;
